--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <!-- Copyright (©) 2022 - 2023 Jesse Hodgson. All Rights Reserved -->
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and Digital Artist">
     <title>SpaceGameDev's Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta http-equiv="Content-Language" content="en">
+    <meta name="description" content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and Digital Artist">
+    <meta name="SpaceGameDev's Website" />
+    <meta name="keywords" content="space,spacegamedev,gamedev,spacegamedev568" />
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
     <link rel="stylesheet" href="css\home.css">
@@ -38,10 +41,12 @@
       <button class="btn-toggle" onclick="javascript:void(0)" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg" alt="Toggle Light or Dark Theme"></button>
       <div id="websidebar" class="sidebar">
         <button class="closebtn" onclick="closeNav()"><img src="https://assets.spacegamedev.com/images/ui/menu-x.svg" class="closenavbutton" title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
-        <a href="index.html" class="sidebar-link">home</a>
-        <a href="projects.html" class="sidebar-link">projects</a>
-        <a href="downloads.html" class="sidebar-link">downloads</a>
-        <a href="support.html" class="sidebar-link">support</a>
+        <a href="index.html" class="sidebar-link">Home</a>
+        <a href="projects.html" class="sidebar-link">Projects</a>
+        <a href="downloads.html" class="sidebar-link">Downloads</a>
+        <a href="support.html" class="sidebar-link">Support</a>
+        <hr>
+        <a href="https://mods.spacegamedev.com" class="sidebar-link">Mods</a>
       </div>
     </div>
     <!-- End Header Section-->
@@ -125,7 +130,7 @@
     <center><p class="contact-header">Contact Me</p></center>
     <p class="contact-p">
       <br><br>
-      If you would like to contact me about something, please use one of the below methods to reach out. If you need help with one of my projects, please visit the <a href="support.html" class="standard-link">support page</a> for info on how to submit a request.
+      If you would like to contact me about something, please use one of the below methods to reach out. If you need help with one of my projects, please visit the <a href="support.html" class="standard-link">support page</a> for info on how to submit a ticket.
       <br><br>
       By Email: <a href="mailto:space@spacegamedev.com" class="standard-link">space@spacegamedev.com</a>
       <br><br>
@@ -147,8 +152,6 @@
       <br><br>
       <a href="https://trello.com/u/spacegamedev568/activity" class="standard-link">Trello</a>
       <br><br>
-<!--  <a href="https://g.dev/spacegamedev" class="standard-link">Google Developers</a>
-      <br><br>--> 
       <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="standard-link">Satisfactory Mod Repository</a>
       <br><br>
     </p></center>
