--- a/support.html
+++ b/support.html
@@ -39,19 +39,21 @@
       <button class="btn-toggle" onclick="javascript:void(0)" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg" alt="Toggle Light or Dark Theme"></button>
       <div id="websidebar" class="sidebar">
         <button class="closebtn" onclick="closeNav()"><img src="https://assets.spacegamedev.com/images/ui/menu-x.svg" class="closenavbutton" title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
-        <a href="index.html" class="sidebar-link">home</a>
-        <a href="projects.html" class="sidebar-link">projects</a>
-        <a href="downloads.html" class="sidebar-link">downloads</a>
-        <a href="support.html" class="sidebar-link">support</a>
+        <a href="index.html" class="sidebar-link">Home</a>
+        <a href="projects.html" class="sidebar-link">Projects</a>
+        <a href="downloads.html" class="sidebar-link">Downloads</a>
+        <a href="support.html" class="sidebar-link">Support</a>
+        <hr>
+        <a href="https://mods.spacegamedev.com" class="sidebar-link">Mods</a>
       </div>
     </div>
     <!-- End Header Section-->
 
 <section class="support"><br><br><br><br><br>
 <center><p class="support-header">Support</p><br><br>
-    <p class="support-p">If you need help with one of my projects, please submit a ticket through the Freshdesk portal or send an email to me.
+    <p class="support-p">If you need help with one of my projects, please submit a ticket through the support portal or send an email to me.
     <br><br><br>
-    <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Freshdesk portal</a></p>
+    <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Support portal</a></p>
     <br><br>
     <p class="support-email">By Email: <a href="mailto:support@spacegamedev.com" class="standard-link">support@spacegamedev.com</a></p></center>
 </section><br><br><br><br><br><br><br><br><br><br><br><br>
