Updated Styling and added link to lfs server

--- a/downloads.html
+++ b/downloads.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css\downloads.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
     <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
-    <!--<link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-VariableFont_wdth,wght.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.woff2" as="font" crossorigin="anonymous">-->
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-VariableFont_wdth,wght.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
   </head>
   <!-- End Head, Start Body -->
@@ -56,8 +56,9 @@
 </div></center>-->
 <br><br><br><br>
 <center><div class="project-download">
-    <p class="download-desc">Download my Satisfactory mods from the Satisfactory Mod Repository or the Satisfactory Mod Manager</p><br>
-    <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="download-link">View</a>
+    <p class="download-desc">Download my Satisfactory mods from the Satisfactory Mod Repository or the Satisfactory Mod Manager.</p><br><br><br>
+    <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="download-link">View</a><br><br><br>
+    <p class="download-desc">Other downloads can be found on my file server: <a class="standard-link" href="https://lfs.spacegamedev.com">lfs.spacegamedev.com</a></p><br>
 </div></center><br><br><br><br><br><br><br><br>
 </section>
 
