Reconfigured the way fonts are imported

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <title>SpaceGameDev's Website</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
+    <link rel="stylesheet" href="css\fonts.css">
     <link rel="stylesheet" href="css\projects.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
     <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
