Updated font URLs

--- a/support.html
+++ b/support.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://assets.spacegamedev.com/css/fonts.css">
     <link rel="stylesheet" href="css\support.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-VariableFont_wdth,wght.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2" as="font" crossorigin="anonymous">
   </head>
   <!-- End Head, Start Body -->
   <body>
