--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="https://assets.spacegamedev.com/css/fonts.css">
     <link rel="stylesheet" href="css\home.css">
     <link rel="preconnect" href="https://assets.spacegamedev.com"/>
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-VariableFont_wdth,wght.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/FlowCircular-Regular.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/JetBrainsMono-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/JetBrainsMono-Italic-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/FlowCircular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/JetBrainsMono.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/JetBrainsMono-Italic.woff2" as="font" crossorigin="anonymous">
     
   </head>
   <!-- End Head, Start Body -->
