--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Jesse Hodgson, aka SpaceGameDev568 - Software Developer and Digital Artist">
     <meta name="SpaceGameDev's Website" />
     <meta name="keywords" content="space,spacegamedev,gamedev,spacegamedev568" />
+    <link rel="manifest" href="/manifest.json">
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
     <link rel="stylesheet" href="https://assets.spacegamedev.com/css/fonts.css">
