Updated Asset Server References

--- a/downloads.html
+++ b/downloads.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Download the latest releases of SpaceGameDev Software.">
     <title>SpaceGameDev's Website</title>
-    <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images\webp\sgd-logo-round.webp"/>
+    <link rel="shortcut icon" type="image/ico" href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
-    <link rel="stylesheet" href="https://assets.spacegamedev.com/css/fonts.css">
+    <link rel="stylesheet" href="https://spacegamedev-assets.pages.dev/css/fonts.css">
     <link rel="stylesheet" href="css\downloads.css">
-    <link rel="preconnect" href="https://assets.spacegamedev.com"/>
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Orbitron.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/OpenSans-Italic.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://assets.spacegamedev.com/css/fonts/Comfortaa.woff2" as="font" crossorigin="anonymous">
+    <link rel="preconnect" href="https://spacegamedev-assets.pages.dev"/>
+    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans-Italic.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/Comfortaa.woff2" as="font" crossorigin="anonymous">
   </head>
   <!-- End Head, Start Body -->
   <body>
@@ -31,13 +31,13 @@
     <!-- Start Header Section -->
     <div class="header">
       <div class="header-bg"></div>
-      <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://assets.spacegamedev.com/images/ui/hamburger-menu.svg" class="openbtn-img" alt="Open Sidebar"></button>
+      <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="openbtn-img" alt="Open Sidebar"></button>
       <center>
       <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
       </center>
       <button class="btn-toggle" onclick="javascript:void(0)" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg" alt="Toggle Light or Dark Theme"></button>
       <div id="websidebar" class="sidebar">
-        <button class="closebtn" onclick="closeNav()"><img src="https://assets.spacegamedev.com/images/ui/menu-x.svg" class="closenavbutton" title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
+        <button class="closebtn" onclick="closeNav()"><img src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton" title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
         <a href="index.html" class="sidebar-link">Home</a>
         <a href="projects.html" class="sidebar-link">Projects</a>
         <a href="downloads.html" class="sidebar-link">Downloads</a>
