Fixed some inconsistencies

--- a/support.html
+++ b/support.html
@@ -62,7 +62,7 @@
 <section class="footer">
     <center><p class="footer-p">
       <br><br>
-      Copyright © 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
+      Copyright &#169; 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
       This website is an open source project, and the source code can be found on <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="footer-link">GitHub</a>.
     </p>
     <br><br>
