--- a/index.html
+++ b/index.html
@@ -120,9 +120,13 @@
         <br>
         Perforce
         <br>
+        Rider
+        <br>    
         Unity
         <br>
         Unreal Engine 4/5
+        <br>
+        WebStorm
         <br>
         Visual Studio/VS Code
         <br>
@@ -165,7 +169,7 @@
     <section class="footer">
     <center><p class="footer-p">
       <br><br>
-      Copyright © 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
+      Copyright &#169; 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
       This website is an open source project, and the source code can be found on <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="footer-link">GitHub</a>.
     </p>
     <br><br>
