Updated Discord username and code reformat/cleanup

--- a/downloads.html
+++ b/downloads.html
@@ -1,87 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Copyright (©) 2022 - 2023 Jesse Hodgson. All Rights Reserved -->
-  <head>
+<!-- Copyright (©) 2022 - 2023 Jesse Hodgson. All Rights Reserved -->
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Download the latest releases of SpaceGameDev Software.">
     <title>SpaceGameDev's Website</title>
-    <link rel="shortcut icon" type="image/ico" href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp"/>
+    <link rel="shortcut icon" type="image/ico"
+          href="https://spacegamedev-assets.pages.dev/images\webp\sgd-logo-round.webp"/>
     <link rel="stylesheet" href="css\main.css">
     <link rel="stylesheet" href="https://spacegamedev-assets.pages.dev/css/fonts.css">
     <link rel="stylesheet" href="css\downloads.css">
     <link rel="preconnect" href="https://spacegamedev-assets.pages.dev"/>
-    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans-Italic.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/Comfortaa.woff2" as="font" crossorigin="anonymous">
-  </head>
-  <!-- End Head, Start Body -->
-  <body>
-        <!-- Javascripts -->
-    <!-- Google tag (gtag.js) https://analytics.google.com/analytics/web/#/p360946171/reports/intelligenthome -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YLEB435KG" defer></script>
-    <script src="js/googletag.js" defer></script>
-    <!-- Auto detect OS theme -->
-    <script src="js/autotheme.js" defer></script>
-    <!-- Sidebar function -->
-    <script src="js/sidebar.js" defer></script>
-    <!-- Theme switcher button function with cookie -->
-    <script src="js/toggletheme.js" defer></script>
+    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/Orbitron.woff2" as="font"
+          crossorigin="anonymous">
+    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans.woff2" as="font"
+          crossorigin="anonymous">
+    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/OpenSans-Italic.woff2" as="font"
+          crossorigin="anonymous">
+    <link rel="preload" href="https://spacegamedev-assets.pages.dev/css/fonts/Comfortaa.woff2" as="font"
+          crossorigin="anonymous">
+</head>
+<!-- End Head, Start Body -->
+<body>
+<!-- Javascripts -->
+<!-- Google tag (gtag.js) https://analytics.google.com/analytics/web/#/p360946171/reports/intelligenthome -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1YLEB435KG" defer></script>
+<script src="js/googletag.js" defer></script>
+<!-- Auto detect OS theme -->
+<script src="js/autotheme.js" defer></script>
+<!-- Sidebar function -->
+<script src="js/sidebar.js" defer></script>
+<!-- Theme switcher button function with cookie -->
+<script src="js/toggletheme.js" defer></script>
 
-    <!-- Start Header Section -->
-    <div class="header">
-      <div class="header-bg"></div>
-      <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="openbtn-img" alt="Open Sidebar"></button>
-      <center>
-      <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
-      </center>
-      <button class="btn-toggle" onclick="javascript:void(0)" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg" alt="Toggle Light or Dark Theme"></button>
-      <div id="websidebar" class="sidebar">
-        <button class="closebtn" onclick="closeNav()"><img src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton" title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
+<!-- Start Header Section -->
+<div class="header">
+    <div class="header-bg"></div>
+    <button class="openbtn" onclick="openNav()" title="Navigation"><img
+            src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="openbtn-img"
+            alt="Open Sidebar"></button>
+    <center>
+        <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
+    </center>
+    <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon"
+                                                                            src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg"
+                                                                            alt="Toggle Light or Dark Theme"></button>
+    <div id="websidebar" class="sidebar">
+        <button class="closebtn" onclick="closeNav()"><img
+                src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton"
+                title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
         <a href="index.html" class="sidebar-link">Home</a>
         <a href="projects.html" class="sidebar-link">Projects</a>
         <a href="downloads.html" class="sidebar-link">Downloads</a>
         <a href="support.html" class="sidebar-link">Support</a>
         <hr>
         <a href="https://mods.spacegamedev.com" class="sidebar-link">Mods</a>
-      </div>
     </div>
-    <!-- End Header Section-->
+</div>
+<!-- End Header Section-->
 
 <section class="downloads"><br><br><br><br><br><br>
-<center><p class="downloads-header">Download Centre</p></center>
-<!--<br><br><br><br>
-<center><div class="project-download">
-    <p class="download-desc">Download the latest release of Charles from GitHub.</p><br>
-    <a href="https://github.com/SpaceGameDev568/Charles/releases" class="download-link">Download</a>
-</div></center>-->
-<br><br><br><br>
-<center><div class="project-download">
-    <p class="download-desc">Download my Satisfactory mods from the Satisfactory Mod Repository or the Satisfactory Mod Manager.</p><br><br><br>
-    <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="download-link">View</a><br><br><br>
-    <p class="download-desc">Other downloads can be found on my file server: <a class="standard-link" href="https://lfs.spacegamedev.com">lfs.spacegamedev.com</a></p><br>
-</div></center><br><br><br><br><br><br><br><br>
+    <center><p class="downloads-header">Download Centre</p></center>
+    <!--<br><br><br><br>
+    <center><div class="project-download">
+        <p class="download-desc">Download the latest release of Charles from GitHub.</p><br>
+        <a href="https://github.com/SpaceGameDev568/Charles/releases" class="download-link">Download</a>
+    </div></center>-->
+    <br><br><br><br>
+    <center>
+        <div class="project-download">
+            <p class="download-desc">Download my Satisfactory mods from the Satisfactory Mod Repository or the
+                Satisfactory Mod Manager.</p><br><br><br>
+            <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="download-link">View</a><br><br><br>
+            <p class="download-desc">Other downloads can be found on my file server: <a class="standard-link"
+                                                                                        href="https://lfs.spacegamedev.com">lfs.spacegamedev.com</a>
+            </p><br>
+        </div>
+    </center>
+    <br><br><br><br><br><br><br><br>
 </section>
 
 <section class="footer">
     <center><p class="footer-p">
-      <br><br>
-      Copyright &#169; 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
-      This website is an open source project, and the source code can be found on <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="footer-link">GitHub</a>.
+        <br><br>
+        Copyright &#169; 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
+        This website is an open source project, and the source code can be found on <a
+            href="https://github.com/SpaceGameDev568/spacegamedev.com" class="footer-link">GitHub</a>.
     </p>
-    <br><br>
-    <p class="attribution">
-      Performance and security by Cloudflare.
-      <br><br>
-      Fonts used:
-      <br><br>
-      Comfortaa: <a href="https://fonts.google.com/specimen/Comfortaa" class="footer-link">Comfortaa on Google Fonts</a>
-      <br>
-      Open Sans: <a href="https://fonts.google.com/specimen/Open+Sans" class="footer-link">Open Sans on Google Fonts</a>
-      <br>
-      Orbitron: <a href="https://fonts.google.com/specimen/Orbitron" class="footer-link">Orbitron on Google Fonts</a>
-    </p></center>
-    </section>
-  </body>
+        <br><br>
+        <p class="attribution">
+            Performance and security by Cloudflare.
+            <br><br>
+            Fonts used:
+            <br><br>
+            Comfortaa: <a href="https://fonts.google.com/specimen/Comfortaa" class="footer-link">Comfortaa on Google
+            Fonts</a>
+            <br>
+            Open Sans: <a href="https://fonts.google.com/specimen/Open+Sans" class="footer-link">Open Sans on Google
+            Fonts</a>
+            <br>
+            Orbitron: <a href="https://fonts.google.com/specimen/Orbitron" class="footer-link">Orbitron on Google
+            Fonts</a>
+        </p></center>
+</section>
+</body>
 
 </html>
