--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
       <center>
       <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
       </center>
-      <button class="btn-toggle" onclick="javascript:void(0)" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg" alt="Toggle Light or Dark Theme"></button>
+      <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg" alt="Toggle Light or Dark Theme"></button>
       <div id="websidebar" class="sidebar">
         <button class="closebtn" onclick="closeNav()"><img src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton" title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
         <a href="index.html" class="sidebar-link">Home</a>
