--- a/projects.html
+++ b/projects.html
@@ -61,6 +61,13 @@
 <br>
 <a href="https://github.com/SpaceGameDev568/Charles" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
 </div><br><br><br>
+
+  <div class="charles-project">
+    <p class="project-name">- GoCleanYourComputer</p><br>
+    <p class="project-desc">GoCleanYourComputer is a GUI app I created in C# to access and execute Windows maintenance tasks easily.</p>
+    <br>
+    <a href="https://github.com/SpaceGameDev568/GoCleanYourComputer" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
+  </div><br><br><br>
 <!--<p class="projects-subsection-h">Games</p>-->
 <p class="projects-subsection-h">Mods</p>
 <br><br><br>
