Update transitions and styling

--- a/downloads.html
+++ b/downloads.html
@@ -53,8 +53,6 @@
         <a href="projects.html" class="sidebar-link">Projects</a>
         <a href="downloads.html" class="sidebar-link">Downloads</a>
         <a href="support.html" class="sidebar-link">Support</a>
-        <hr>
-        <a href="https://mods.spacegamedev.com" class="sidebar-link">Mods</a>
     </div>
 </div>
 <!-- End Header Section-->
@@ -69,11 +67,7 @@
     <br><br><br><br>
     <center>
         <div class="project-download">
-            <p class="download-desc">Download my Satisfactory mods from the Satisfactory Mod Repository or the
-                Satisfactory Mod Manager.</p><br><br><br>
-            <a href="https://ficsit.app/user/5GqLMHyzA3myPG" class="download-link">View</a><br><br><br>
-            <p class="download-desc">Other downloads can be found on my file server: <a class="standard-link"
-                                                                                        href="https://lfs.spacegamedev.com">lfs.spacegamedev.com</a>
+            <p class="download-desc">All downloads are currently hosted on the <a class="standard-link" href="https://lfs.spacegamedev.com">SpaceGameDev Large File Storage (LFS)</a> website.</p><br><br><br>
             </p><br>
         </div>
     </center>
