--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
         <a class="sidebar-link" href="projects.html">Projects</a>
         <a class="sidebar-link" href="downloads.html">Downloads</a>
         <a class="sidebar-link" href="support.html">Support</a>
-        <hr>
-        <a class="sidebar-link" href="https://mods.spacegamedev.com">Mods</a>
     </div>
 </div>
 <!-- End Header Section-->
@@ -194,7 +192,7 @@
         <br><br>
         By Email: <a class="standard-link" href="mailto:space@spacegamedev.com">space@spacegamedev.com</a>
         <br><br>
-        Discord: <a class="standard-link" href="https://discord.com/app">@spacegamedev568</a>
+        Discord: @spacegamedev568
     </p>
 </section>
 <br><br>
