--- a/support.html
+++ b/support.html
@@ -44,17 +44,15 @@
         <a href="projects.html" class="sidebar-link">Projects</a>
         <a href="downloads.html" class="sidebar-link">Downloads</a>
         <a href="support.html" class="sidebar-link">Support</a>
-        <hr>
-        <a href="https://mods.spacegamedev.com" class="sidebar-link">Mods</a>
       </div>
     </div>
     <!-- End Header Section-->
 
 <section class="support"><br><br><br><br><br>
 <center><p class="support-header">Support</p><br><br>
-    <p class="support-p">If you need help with one of my projects, please submit a ticket through the support portal or send an email to me.
+    <p class="support-p">If you need help with one of my projects, please submit a ticket through the support portal or send an email to me.</p>
     <br><br><br>
-    <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Support portal</a></p>
+    <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Support portal</a>
     <br><br>
     <p class="support-email">By Email: <a href="mailto:support@spacegamedev.com" class="standard-link">support@spacegamedev.com</a></p></center>
 </section><br><br><br><br><br><br><br><br><br><br><br><br>
