--- a/projects.html
+++ b/projects.html
@@ -43,8 +43,6 @@
         <a href="projects.html" class="sidebar-link">Projects</a>
         <a href="downloads.html" class="sidebar-link">Downloads</a>
         <a href="support.html" class="sidebar-link">Support</a>
-        <hr>
-        <a href="https://mods.spacegamedev.com" class="sidebar-link">Mods</a>
       </div>
     </div>
     <!-- End Header Section-->
@@ -75,28 +73,34 @@
 <p class="project-name">- Factory Props</p><br>
 <p class="project-desc">Factory Props is a mod for Satisfactory that repurposes assets from the game as decorative buildings.</p>
 <br>
-<a href="https://github.com/SpaceGameDev568/Factory_Prop_Mod" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
+<a href="https://github.com/SpaceGameDev568/Factory_Prop_Mod" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/Factory_Prop_Mod" class="download-link">Download</a>
 </div><br><br><br>
 
 <div class="sf-mod-project">
 <p class="project-name">- Remove All Annoyances</p><br>
 <p class="project-desc">Remove All Annoyances is a mod for Satisfactory that removes annoying things from the world.</p>
 <br>
-<a href="https://github.com/SpaceGameDev568/RemoveAllAnnoyances" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
+<a href="https://github.com/SpaceGameDev568/RemoveAllAnnoyances" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/RemoveAllAnnoyances" class="download-link">Download</a>
 </div><br><br><br>
 
 <div class="sf-mod-project">
 <p class="project-name">- SatisWHACKtory</p><br>
 <p class="project-desc">SatisWHACKtory is a mod for Satisfactory that adds some fun obstacles to the game to cause chaos in multiplayer sessions.</p>
 <br>
-<a href="https://github.com/SpaceGameDev568/ObstacleMod" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
+<a href="https://github.com/SpaceGameDev568/ObstacleMod" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/ObstacleMod" class="download-link">Download</a>
 </div><br><br><br>
 
 <div class="sf-mod-project">
 <p class="project-name">- Satisfactory Discord Rich Presence</p><br>
 <p class="project-desc">This is a mod for Satisfactory that lets you see your Satisfactory presence info on your Discord profile.</p>
 <br>
-<a href="https://github.com/SpaceGameDev568/FG_DiscordRP" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
+<a href="https://github.com/SpaceGameDev568/FG_DiscordRP" class="source-link">GitHub</a> <a href="https://ficsit.app/mod/FG_DiscordRP" class="download-link">Download</a>
+</div><br><br><br>
+  <div class="sf-mod-project">
+    <p class="project-name">- Better Grass</p><br>
+    <p class="project-desc">This is a mod for Satisfactory that lets you customize how the grass looks in-game</p>
+    <br>
+    <a href="https://github.com/SpaceGameDev568/BetterGrass" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
 </div><br><br><br>
 </section><br>
 
