--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <br><br>
         By Email: <a class="standard-link" href="mailto:space@spacegamedev.com">space@spacegamedev.com</a>
         <br><br>
-        Discord: @spacegamedev568
+        Discord: @spacegamedev
     </p>
 </section>
 <br><br>
