--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <center><p class="footer-p">
         <br><br>
         Copyright &#169; 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
-        This website is an open source project, and the source code can be found on <a
+        The source code for this website is available for reference on <a
             class="footer-link" href="https://github.com/SpaceGameDev568/spacegamedev.com">GitHub</a>.
     </p>
         <br><br>
