Added status page link on footer

--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
         <p class="attribution">
             Performance and security by Cloudflare.
             <br><br>
+            Having trouble with one of my services? Check the <a class="footer-link" href="https://status.spacegamedev.com">status of everything here</a>.
+            <br><br>
             Fonts used:
             <br><br>
             Comfortaa: <a class="footer-link" href="https://fonts.google.com/specimen/Comfortaa">Comfortaa on Google
