--- a/support.html
+++ b/support.html
@@ -64,6 +64,8 @@
     <p class="attribution">
       Performance and security by Cloudflare.
       <br><br>
+      Having trouble with one of my services? Check the <a class="footer-link" href="https://status.spacegamedev.com">status of everything here</a>.
+      <br><br>
       Fonts used:
       <br><br>
       Comfortaa: <a href="https://fonts.google.com/specimen/Comfortaa" class="footer-link">Comfortaa on Google Fonts</a>
