Update LinkedIn redirect

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <center><p class="socials-p">
         <a class="standard-link" href="https://github.com/SpaceGameDev568">GitHub</a>
         <br><br>
-        <a class="standard-link" href="https://www.linkedin.com/in/jesse-hodgson-22aba626b/">LinkedIn</a>
+        <a class="standard-link" href="linkedin.html">LinkedIn</a>
         <br><br>
         <a class="standard-link" href="https://youtube.com/@spacegamedev">YouTube</a>
         <br><br>
