--- a/linkedin.html
+++ b/linkedin.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv = "refresh" content = "1; url = https://www.linkedin.com/in/jesse-hodgson-22aba626b/" />
+    <meta http-equiv = "refresh" content = "1; url = https://www.linkedin.com/in/jesse-hodgson/" />
     <title>Jesse's LinkedIn Profile</title>
     <link rel="shortcut icon" type="image/ico" href="https://assets.spacegamedev.com/images/webp/sgd-logo-round.webp"/>
     <link rel="stylesheet" href="https://spacegamedev.com/css/main.css">
