Removed deprecated Center tags and improved sticky footer

--- a/projects.html
+++ b/projects.html
@@ -30,9 +30,9 @@
       <div class="header-bg"></div>
       <!--<a><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
       <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="openbtn-img" alt="Open Sidebar"></button>
-      <center>
+      
       <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
-      </center>
+      
       <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg" alt="Toggle Light or Dark Theme"></button>
       <div id="websidebar" class="sidebar">
         <button class="closebtn" onclick="closeNav()"><img src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton" title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
@@ -43,10 +43,11 @@
       </div>
     </div>
     <!-- End Header Section-->
-
+    <div id="page-wrapper">
+      <div class="content-wrapper">
 <section class="projects">
 <br><br><br><br><br><br>
-<center><p class="projects-header">My Projects</p></center>
+<p class="projects-header">My Projects</p>
 <br><br>
 <p class="projects-subsection-h">Software</p>
 <br><br><br>
@@ -100,9 +101,10 @@
     <a href="https://github.com/SpaceGameDev568/BetterGrass" class="source-link">GitHub</a> <a href="downloads.html" class="download-link">Download</a>
 </div><br><br><br>
 </section><br>
-
+    </div>
+    </div>
 <section class="footer">
-    <center><p class="footer-p">
+    <p class="footer-p">
       <br><br>
       Copyright &#169; 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
       The source code for this website is available for reference on <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="footer-link">GitHub</a>.
@@ -120,7 +122,7 @@
       Open Sans: <a href="https://fonts.google.com/specimen/Open+Sans" class="footer-link">Open Sans on Google Fonts</a>
       <br>
       Orbitron: <a href="https://fonts.google.com/specimen/Orbitron" class="footer-link">Orbitron on Google Fonts</a>
-    </p></center>
+    </p>
     </section>
   </body>
 
