--- a/support.html
+++ b/support.html
@@ -44,7 +44,8 @@
       </div>
     </div>
     <!-- End Header Section-->
-
+    <div id="page-wrapper">
+<div class="content-wrapper">
 <section class="support"><br><br><br><br><br>
 <center><p class="support-header">Support</p><br><br>
     <p class="support-p">If you need help with one of my projects, please submit a ticket through the support portal or send an email to me.</p>
@@ -52,8 +53,9 @@
     <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Support portal</a>
     <br><br>
     <p class="support-email">By Email: <a href="mailto:support@spacegamedev.com" class="standard-link">support@spacegamedev.com</a></p></center>
-</section><br><br><br><br><br><br><br><br><br><br><br><br>
-
+</section><br><br>
+</div>
+    </div>
 <section class="footer">
     <center><p class="footer-p">
       <br><br>
