Fix support page

--- a/support.html
+++ b/support.html
@@ -31,7 +31,7 @@
       <div class="header-bg"></div>
       <!--<a><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="hamburger-menu"></a>-->
       <button class="openbtn" onclick="openNav()" title="Navigation"><img src="https://spacegamedev-assets.pages.dev/images/ui/hamburger-menu.svg" class="openbtn-img" alt="Open Sidebar"></button>
-      <center>
+      
       <img class="header-logo" src="https:\\spacegamedev-assets.pages.dev/images/webp/avatar-outline.webp" alt="">
       </center>
       <button class="btn-toggle" onclick="void(0)" title="Switch themes"><img class="theme-icon" src="https://spacegamedev-assets.pages.dev/images/ui/theme-toggle.svg" alt="Toggle Light or Dark Theme"></button>
@@ -47,7 +47,7 @@
     <div id="page-wrapper">
 <div class="content-wrapper">
 <section class="support"><br><br><br><br><br>
-<center><p class="support-header">Support</p><br><br>
+<p class="support-header">Support</p><br><br>
     <p class="support-p">If you need help with one of my projects, please submit a ticket through the support portal or send an email to me.</p>
     <br><br><br>
     <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Support portal</a>
@@ -57,7 +57,7 @@
 </div>
     </div>
 <section class="footer">
-    <center><p class="footer-p">
+    <p class="footer-p">
       <br><br>
       Copyright &#169; 2022 - 2023 Jesse Hodgson. All Rights Reserved.<br>
       The source code for this website is available for reference on <a href="https://github.com/SpaceGameDev568/spacegamedev.com" class="footer-link">GitHub</a>.
