Added certifications page

--- a/downloads.html
+++ b/downloads.html
@@ -47,6 +47,7 @@
                 src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton"
                 title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
         <a href="index.html" class="sidebar-link">Home</a>
+        <a class="sidebar-link" href="certifications.html">Certifications</a>
         <a href="projects.html" class="sidebar-link">Projects</a>
         <a href="downloads.html" class="sidebar-link">Downloads</a>
         <a href="support.html" class="sidebar-link">Support</a>
@@ -56,12 +57,7 @@
 <div id="page-wrapper">
     <div class="content-wrapper">
 <section class="downloads"><br><br><br><br><br><br>
-    <p class="downloads-header">Download Centre</p>
-    <!--<br><br><br><br>
-    <div class="project-download">
-        <p class="download-desc">Download the latest release of Charles from GitHub.</p><br>
-        <a href="https://github.com/SpaceGameDev568/Charles/releases" class="download-link">Download</a>
-    </div>-->
+    <p class="generic-text-header">Download Centre</p>
     <br><br><br><br>
     
         <div class="project-download">
