--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 class="closenavbutton" src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg"
                 title="Close Navigation"></button>
         <a class="sidebar-link" href="index.html">Home</a>
+        <a class="sidebar-link" href="certifications.html">Certifications</a>
         <a class="sidebar-link" href="projects.html">Projects</a>
         <a class="sidebar-link" href="downloads.html">Downloads</a>
         <a class="sidebar-link" href="support.html">Support</a>
@@ -97,7 +98,7 @@
 
 <section class="about">
     <br><br>
-    <p class="about-header">About Me</p>
+    <p class="generic-text-header">About Me</p>
         <br><br>
         <p class="about-me-bio">
             I started learning software development back in 2021 when I was curious about how the games that I enjoyed
@@ -130,7 +131,7 @@
 
 <section class="experience">
     <br><br>
-    <p class="experience-header">My Skills</p>
+    <p class="generic-text-header">My Skills</p>
         <br><br>
         <p class="skills">
             <b class="experience-minor-h">Programming Languages:</b>
@@ -181,7 +182,7 @@
 
 <section class="contact">
     <br><br>
-    <p class="contact-header">Contact Me</p>
+    <p class="generic-text-header">Contact Me</p>
     <p class="contact-p">
         <br><br>
         If you would like to contact me about something, please use one of the below methods to reach out. If you need
@@ -198,7 +199,7 @@
     <hr class="vertical-section-divider">
 
 <section class="socials"><br><br>
-    <p class="socials-header">My Socials</p>
+    <p class="generic-text-header">My Socials</p>
     <br><br>
     <p class="socials-p">
         <a class="standard-link" href="https://github.com/SpaceGameDev568">GitHub</a>
