--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,7 @@
       <div id="websidebar" class="sidebar">
         <button class="closebtn" onclick="closeNav()"><img src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton" title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
         <a href="index.html" class="sidebar-link">Home</a>
+        <a class="sidebar-link" href="certifications.html">Certifications</a>
         <a href="projects.html" class="sidebar-link">Projects</a>
         <a href="downloads.html" class="sidebar-link">Downloads</a>
         <a href="support.html" class="sidebar-link">Support</a>
@@ -47,7 +48,7 @@
       <div class="content-wrapper">
 <section class="projects">
 <br><br><br><br><br><br>
-<p class="projects-header">My Projects</p>
+<p class="generic-text-header">My Projects</p>
 <br><br>
 <p class="projects-subsection-h">Software</p>
 <br><br><br>
