--- a/support.html
+++ b/support.html
@@ -38,6 +38,7 @@
       <div id="websidebar" class="sidebar">
         <button class="closebtn" onclick="closeNav()"><img src="https://spacegamedev-assets.pages.dev/images/ui/menu-x.svg" class="closenavbutton" title="Close Navigation" alt="Close Navigation" aria-label="Close the navigation bar."></button>
         <a href="index.html" class="sidebar-link">Home</a>
+        <a class="sidebar-link" href="certifications.html">Certifications</a>
         <a href="projects.html" class="sidebar-link">Projects</a>
         <a href="downloads.html" class="sidebar-link">Downloads</a>
         <a href="support.html" class="sidebar-link">Support</a>
@@ -47,7 +48,7 @@
 <div id="page-wrapper">
 <div class="content-wrapper">
 <section class="support"><br><br><br><br><br>
-<p class="support-header">Support</p><br><br>
+<p class="generic-text-header">Support</p><br><br>
     <p class="support-p">If you need help with one of my projects, please submit a ticket through the support portal or send an email to me.</p>
     <br><br><br>
     <a href="https://spacegamedev.freshdesk.com/support/tickets/new" class="portal-link">Support portal</a>
